--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "json-server": "^0.17.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-icons": "^4.10.1",
     "react-redux": "^8.1.2",
     "react-scripts": "5.0.1",
     "tailwindcss": "^3.3.2",
